Fluid Domain (Liquid mode) - changing "Frame Start" setting for sim causes strange Replay errors #79423

Closed
opened 2020-07-31 12:27:02 +02:00 by Libor Batek · 9 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48

Blender Version
Broken: version: 2.83.3, branch: master, commit date: 2020-07-22 06:01, hash: 353e5bd749
Worked: (newest version of Blender that worked as expected)

After changing frame start from default frame 1 to something else (later in time) causes Replay cache problems in playback.
It doesnt show correct sim particle data but old one mixing it with the new sim after the new Start Frame.

Exact steps for others to reproduce the error
Create some simple sim using liquid domain and flow objects.
Run simulation for one time to see results (default 1-50frame)
Go to frame 01 and change domain settings for "Frame Start" to let say frame 25
Hit playback...
Replay is not showing accurate results but broken mixed up cache?

Thx!
Libor

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48 **Blender Version** Broken: version: 2.83.3, branch: master, commit date: 2020-07-22 06:01, hash: `353e5bd749` Worked: (newest version of Blender that worked as expected) After changing frame start from default frame 1 to something else (later in time) causes Replay cache problems in playback. It doesnt show correct sim particle data but old one mixing it with the new sim after the new Start Frame. **Exact steps for others to reproduce the error** Create some simple sim using liquid domain and flow objects. Run simulation for one time to see results (default 1-50frame) Go to frame 01 and change domain settings for "Frame Start" to let say frame 25 Hit playback... Replay is not showing accurate results but broken mixed up cache? Thx! Libor
Author

Added subscriber: @LiborBatek

Added subscriber: @LiborBatek
Author

After some thinking, I guess that blender doesnt throw away cached frames after changing sim lenght from frame 1-50 to 25-50 ...the cached frames are still used in 1-25 frame range. They should be thrown away to not use it/display it.

Generally going from longer sim to shorter should clean up cached replay accordingly to not display it when out of range.

L.

After some thinking, I guess that blender doesnt throw away cached frames after changing sim lenght from frame 1-50 to 25-50 ...the cached frames are still used in 1-25 frame range. They should be thrown away to not use it/display it. Generally going from longer sim to shorter should clean up cached replay accordingly to not display it when out of range. L.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

In #79423#988295, @LiborBatek wrote:
After some thinking, I guess that blender doesnt throw away cached frames after changing sim lenght from frame 1-50 to 25-50 ...the cached frames are still used in 1-25 frame range. They should be thrown away to not use it/display it.

There may be other animated elements influencing simulation so cleaning up cache may be necessary, not sure if this is testable with relations currently.

> In #79423#988295, @LiborBatek wrote: > After some thinking, I guess that blender doesnt throw away cached frames after changing sim lenght from frame 1-50 to 25-50 ...the cached frames are still used in 1-25 frame range. They should be thrown away to not use it/display it. There may be other animated elements influencing simulation so cleaning up cache may be necessary, not sure if this is testable with relations currently.

Added subscriber: @sebbas

Added subscriber: @sebbas

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sebastián Barschkis self-assigned this 2020-08-04 11:48:20 +02:00

@LiborBatek I hope I understood your issue correctly. In the latest version of master (03c2439d96) the viewport will never show any fluid if the current frame is outside of the cache start / end frame range.
Feel free to reopen if this was not what you had in mind!

@LiborBatek I hope I understood your issue correctly. In the latest version of master (03c2439d96e8) the viewport will never show any fluid if the current frame is outside of the cache start / end frame range. Feel free to reopen if this was not what you had in mind!

I understood this in a way that if you want to move simulation in time, you just change frame start to later frame, but that will just "not display" simulation.

I understood this in a way that if you want to move simulation in time, you just change frame start to later frame, but that will just "not display" simulation.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79423
No description provided.